--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: install
         run: |
           python -m pip install -U pip
-          pip install --progress-bar off -U black isort flake8 pyproject-flake8 mypy
+          pip install --progress-bar off -U black isort flake8 pyproject-flake8 mypy types-protobuf
       - name: black
         run: black . --check --diff
       - name: isort
