Set PYTHONPATH on testing.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,4 +17,4 @@ jobs:
           python -m pip install -U pip
           pip install --progress-bar off -U pytest protobuf
       - name: test
-        run: pytest .
+        run: PYTHONPATH=. pytest .
