--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: install
         run: |
           python -m pip install -U pip
-          pip install --progress-bar off -U pytest protobuf numpy
+          pip install --progress-bar off -U "pytest>=6.2.5" protobuf numpy
       - name: test
         run: PYTHONPATH=. pytest .
