--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,4 +17,4 @@ jobs:
           python -m pip install -U pip
           pip install --progress-bar off -U "pytest>=6.2.5" protobuf numpy
       - name: test
-        run: PYTHONPATH=. pytest .
+        run: PYTHONPATH=. pytest . -k "not mysql"
