--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,3 +18,36 @@ jobs:
           pip install --progress-bar off -U "pytest>=6.2.5" protobuf numpy
       - name: test
         run: PYTHONPATH=. pytest . -k "not mysql"
+  test-mysql:
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: optur_root_passwd
+          MYSQL_DATABASE: optur
+          MYSQL_USER: opturci
+          MYSQL_PASSWORD: optur_passwd
+        options: >-
+          --health-cmd "mysqladmin ping -h localhost"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: install
+        run: |
+          python -m pip install -U pip
+          pip install --progress-bar off -U "pytest>=6.2.5" protobuf numpy pymysql
+      - name: test
+        run: PYTHONPATH=. pytest . -k "mysql"
+        env:
+          MYSQL_USER: opturci
+          MYSQL_HOST: "127.0.0.1"
+          MYSQL_PASSWORD: optur_passwd
+          MYSQL_DATABASE: optur
