--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,10 +12,16 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: install protoc
+        uses: arduino/setup-protoc@v1
       - name: install
         run: |
           python -m pip install -U pip
-          pip install --progress-bar off -U black isort flake8 pyproject-flake8 mypy types-protobuf numpy "pytest>=6.2.5" pymysql types-pymysql pytest-timeout
+          pip install --progress-bar off -U black isort flake8 pyproject-flake8 mypy mypy-protobuf types-protobuf numpy "pytest>=6.2.5" pymysql types-pymysql pytest-timeout
+      - name: compile proto
+        run: |
+          protoc optur/proto/*.proto --python_out=. --mypy_out=.
+          black optur/proto
       - name: black
         run: black . --check --diff
       - name: isort
